--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="font-manrope">
     <header class="bg-gradient-to-b from-slate-50 to-white">
        <div class="container mx-auto p-5 lg:px-10 lg:py-7">
-        <nav>
+        <nav class="mb-14">
             <div class="navbar bg-base-100 bg-slate-50">
                 <div class="navbar-start">
 
@@ -120,10 +120,33 @@
                 </div>
               </div>
         </nav>
+
+        <section>
+          <div class="mb-28 flex flex-col items-center justify-center text-center">
+
+            <img class="mb-7" src="assets/banner.png" alt="">
+
+            <h1 class="mb-7 w-9/12 text-6xl font-extrabold">A barn house of this design has a 
+              striking appearance </h1>
+
+            <p class="mb-7 w-9/12 font-medium text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+
+            <button class="btn rounded-3xl bg-[#ABEF5F] opacity-80 text-black font-extrabold">
+              <span class="text-xl">View Details </span>
+              <svg class="w-7 bg-[#ABEF5F] opacity-100 p-1 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-4"> 
+                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />                      
+              </svg>
+            </button>
+          </div>
+        </section>
        </div>
     </header>
     <main>
+      <section>
+        <div class="container mx-auto p-5 lg:px-10 lg:py-7 relative">
 
+        </div>
+      </section>
     </main>
     <footer>
 
