--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body class="font-manrope">
     <header class="bg-gradient-to-b from-slate-50 to-white">
-       <div class="container mx-auto p-5 lg:px-10 lg:py-7">
+       <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
         <nav class="mb-14">
             <div class="navbar bg-base-100 bg-slate-50">
                 <div class="navbar-start">
@@ -142,9 +142,58 @@
        </div>
     </header>
     <main>
-      <section>
-        <div class="container mx-auto p-5 lg:px-10 lg:py-7 relative">
+        <!-- SECTION THOUGHTFUL DESIGN -->
+      <section class="bg-slate-200 mx-auto">
+        
+        <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7 relative">
+          <div>
+            <img class="hidden lg:block absolute -left-4 top-8" src="assets/Vector.png" alt="">
+          </div>
+           <div class="lg:flex pt-14 items-center">
+            <div>
+              <div class="mb-9 w-10/12">
+                <button class="btn mb-4 rounded-3xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                  </svg>
+                  
+                  <span class="pr-3">About Us</span>
+                </button>
+                <h1 class="mb-6 text-4xl font-black">
+                  We design thoughtful, liveable spaces
+                </h1>
+                <p class="text-xl">
+                  The barn house captivates with its blend of rustic charm and 
+                  modern sophistication, featuring weathered wood, sleek metal accents.
+                </p>
+              </div>
 
+              <div class="w-9/12 flex-col">
+                <div class="flex bg-white p-3 pr-14 mb-2 items-center">
+                  <div class="mr-5">
+                    <img src="assets/commercial.png" alt="">
+                  </div>
+                  <div>
+                    <h1 class="text-2xl">Commercial</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  </div>                 
+                </div>
+
+                <div class="flex bg-white p-3 pr-14 items-center">
+                  <div class="mr-5">
+                    <img src="assets/residential.png" alt="">
+                  </div>
+                  <div>
+                    <h1 class="text-2xl">Residential</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  </div>                 
+                </div>
+              </div>
+            </div>
+            <div class=" w-4/5">
+              <img class="bg-cover mx-auto w-max h-max" src="assets/Rectangle.png" alt="">
+            </div>
+           </div>
         </div>
       </section>
     </main>
