--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <img class="mb-7" src="assets/banner.png" alt="">
 
-            <h1 class="mb-7 w-9/12 text-6xl font-extrabold">A barn house of this design has a 
+            <h1 class="mb-7 w-9/12 text-4xl lg:text-6xl font-extrabold">A barn house of this design has a 
               striking appearance </h1>
 
             <p class="mb-7 w-9/12 font-medium text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
@@ -142,8 +142,8 @@
        </div>
     </header>
     <main>
-        <!-- SECTION THOUGHTFUL DESIGN -->
-      <section class="bg-slate-200 mx-auto">
+        <!-- SECTION ABOUT US -->
+      <section class="bg-[#F4F4F4] mx-auto mb-24">
         
         <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7 relative">
           <div>
@@ -152,7 +152,7 @@
            <div class="lg:flex pt-14 items-center">
             <div>
               <div class="mb-9 w-10/12">
-                <button class="btn mb-4 rounded-3xl">
+                <button class="btn mb-4 rounded-3xl bg-white">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                   </svg>
@@ -196,6 +196,64 @@
            </div>
         </div>
       </section>
+
+      <!-- SECTION HOW WE WORK -->
+       <section class="bg-[#F4F4F4]">
+        <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
+          <!-- INFO DIV -->
+          <div class="flex flex-col items-center justify-center text-center">
+            <button class="btn mb-4 rounded-3xl bg-white">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+              </svg>
+              
+              <span class="pr-3">How We Works</span>
+            </button>
+
+            <h1 class="mb-6 text-4xl font-bold">Our Works Process</h1>
+
+            <p class="w-3/5 mb-8 text-lg">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          </div>
+
+          <!-- CARD DIV -->
+          <div class="grid grid-cols-1 gap-y-2 lg:grid-cols-4 lg:gap-x-2">
+            <!-- CARD-1 -->
+              <div class="card bg-[#E7C1D3] text-[#1C1C1C]">
+                <div class="card-body">
+                  <img class="w-10" src="assets/concept.png" alt="">
+                  <h2 class="card-title">Concept</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>    
+                            <!-- CARD-2 -->
+              <div class="card bg-[#EFDA6E] text-[#1C1C1C]">
+                <div class="card-body">
+                  <img class="w-10" src="assets/flow-chart.png" alt="">
+                  <h2 class="card-title">Design Process</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+                            <!-- CARD-3 -->
+              <div class="card bg-[#A4DAC3] text-[#1C1C1C] ">
+                <div class="card-body">
+                  <img class="w-10" src="assets/vision.png" alt="">
+                  <h2 class="card-title">Supervision</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+                            <!-- CARD-4 -->
+              <div class="card bg-[#77AAEA] text-[#1C1C1C]">
+                <div class="card-body">
+                  <img class="w-10" src="assets/budget-planning.png" alt="">
+                  <h2 class="card-title">Budget Planning</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+       </section>
     </main>
     <footer>
 
