--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
        </section>
 
        <!-- SECTION PORTFOLIO -->
-       <section>
+       <section class="mb-20">
         <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
           <!-- INFO DIV -->
           <div class="flex flex-col items-center justify-center text-center">
@@ -329,6 +329,46 @@
               <img class="w-10/12 lg:w-auto  bg-center mx-auto mb-3 lg:mb-0" src="assets/img5.png" alt="">
             </div>
            </div>
+       </section>
+
+       <!-- SECTION CONNECT -->
+       <section class="bg-[url(assets/bg.jpg)]">
+          <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
+            
+            <!-- INFO DIV -->
+            <div class="flex flex-col items-center justify-center text-center">
+              <button class="btn mb-4 rounded-3xl bg-[#ABEF5F50]">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                </svg>
+                
+                <span class="pr-3">Let's Connect</span>
+              </button>
+  
+              <h1 class="mb-6 text-4xl font-bold">Lets Discuss Our Next Project</h1>
+  
+              <p class="lg:w-3/5 mb-8 text-lg">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+
+            <div class="grid gap-5 grid-cols-1 lg:grid-cols-2 max-w-4xl mx-auto bg-slate-200 p-5 rounded-2xl">
+              <input class=" h-12 rounded-3xl text-black pl-5" type="text" placeholder="First Name" name="dfg " id="assd">
+
+              <input class=" h-12 rounded-3xl text-black pl-5" type="text" placeholder="Last Name*" name="" id="">
+
+              <input class=" h-12 rounded-3xl text-black pl-5" type="number" placeholder="Phone Number*" name="" id="">
+
+              <input class=" h-12 rounded-3xl text-black pl-5" type="email" placeholder="Email Number*" name="" id="">
+
+              <input class=" h-12 lg:col-span-2 row-span-3 rounded-3xl text-black pl-5" type="text" placeholder="Write Your Text Here" name="" id="">
+
+              <button class="btn rounded-3xl lg:col-span-2 bg-[#ABEF5F] text-black font-extrabold">
+                <span class="text-2xl">Book Consult </span>
+                <svg class="w-7 bg-black p-1 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4"> 
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />                      
+                </svg>
+              </button>
+            </div>
+          </div>
        </section>
     </main>
     <footer>
