--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
        </section>
 
        <!-- SECTION CONNECT -->
-       <section class="bg-[url(assets/bg.jpg)]">
+       <section class="bg-[url(assets/bg.jpg)] mb-20">
           <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
             
             <!-- INFO DIV -->
@@ -371,8 +371,35 @@
           </div>
        </section>
     </main>
-    <footer>
+    <footer class="bg-[#1C1C1C]">
+       <div class="max-w-4xl mx-auto pt-14">
+        <div class="flex flex-col  items-center justify-center text-center">
+          <a class="flex">
+            <svg class="w-10 bg-[#ABEF5F] p-1 mr-2 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="size-4"> 
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />                      
+            </svg>
+            <span class="font-extrabold text-white text-4xl ">Rinterio</span>
+          </a>
+          <p class="lg:w-3/5 w-4/5 text-gray-400 my-8 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
+          <div class="navbar-center flex mb-14">
+            <ul class="menu  px-1 text-gray-100 flex-col lg:flex-row items-center text-lg">
+              <li><a href="">Home</a></li>
+              <li><a href="">Services</a></li>
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Blogs</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <button class="btn rounded-3xl bg-[#ABEF5F] text-black font-extrabold">
+            <span class="text-2xl">Book Consult </span>
+            <svg class="w-7 bg-black p-1 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4"> 
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />                      
+            </svg>
+          </button>
+        </div>
+       </div>
     </footer>
 </body>
 </html>
