--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body class="font-manrope">
     <header class="bg-gradient-to-b from-slate-50 to-white">
        <div class="max-w-7xl mx-auto p-5 lg:px-10 lg:py-7">
-        <nav class="mb-14">
+        <nav class="mb-14  ">
             <div class="navbar bg-base-100 bg-slate-50">
-                <div class="navbar-start">
+                <div class="navbar-start w-1/3">
 
 
                   <a class="flex">
@@ -36,41 +36,30 @@
                   </a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1 text-lg">
-                    <!-- <li><a>Item 1</a></li>
-                    <li>
-                      <details>
-                        <summary>Parent</summary>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </details>
-                    </li>
-                    <li><a>Item 3</a></li> -->
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Blogs</a></li>
-                    <li><a href="">Contact Us</a></li>
+                  <ul class="flex  text-lg">
+                    <li><a class="mr-2" href="">Home</a></li>
+                    <li><a class="mr-2" href="">Services</a></li>
+                    <li><a class="mr-2" href="">Portfolio</a></li>
+                    <li><a class="mr-2" href="">Blogs</a></li>
+                    <li><a class="" href="">Contact Us</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end lg:flex hidden ">
+                <div class="navbar-end lg:flex hidden w-1/3">
                   <div class=" bg-white p-2 rounded-full">
                     <svg class="w-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                     </svg>                
                   </div>
-                  <div class=" bg-white p-2 rounded-full ml-2">
+                  <div class=" bg-white p-2 rounded-full ">
                     <svg class="w-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                     </svg>
                     
                   </div>
-                  <div class="ml-2">
+                  <div class="">
                     <button class="btn rounded-3xl bg-[#ABEF5F] text-black font-extrabold">
-                      <span class="text-2xl">Book Consult </span>
-                      <svg class="w-7 bg-black p-1 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4"> 
+                      <span class="text-lg">Book Consult </span>
+                      <svg class="w-7 bg-black p-1 border rounded-full" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-1"> 
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />                      
                       </svg>
                     </button>
@@ -98,15 +87,6 @@
                     <ul
                       tabindex="0"
                       class="menu menu-sm right-0 dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                      <!-- <li><a>Item 1</a></li>
-                      <li>
-                        <a>Parent</a>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </li>
-                      <li><a>Item 3</a></li> -->
                       <li><a href="">Home</a></li>
                       <li><a href="">Services</a></li>
                       <li><a href="">Portfolio</a></li>
@@ -192,6 +172,7 @@
             </div>
             <div class=" w-4/5">
               <img class="bg-cover mx-auto w-max h-max" src="assets/Rectangle.png" alt="">
+              
             </div>
            </div>
         </div>
@@ -276,8 +257,8 @@
           <!-- ROW 1 OF FLEX -->
           <div class="lg:flex lg:items-center mb-4">
             <div class="flex flex-col lg:flex-row lg:items-center">
-              <div class="mx-auto lg:mx-0 ">
-                <img class="bg-cover w-full" src="assets/img1.png" alt="">
+              <div class="mx-auto lg:mx-0 w-full lg:w-auto">
+                <img class="w-10/12 lg:w-auto  bg-center mx-auto mb-3 lg:mb-0" src="assets/img1.png" alt="">
               </div>
               <div class="card bg-base-100 lg:w-3/5 ">
                 <div class="card-body">
@@ -371,7 +352,7 @@
           </div>
        </section>
     </main>
-    <footer class="bg-[#1C1C1C]">
+    <footer class="bg-[#1C1C1C] pb-8">
        <div class="max-w-4xl mx-auto pt-14">
         <div class="flex flex-col  items-center justify-center text-center">
           <a class="flex">
@@ -380,7 +361,7 @@
             </svg>
             <span class="font-extrabold text-white text-4xl ">Rinterio</span>
           </a>
-          <p class="lg:w-3/5 w-4/5 text-gray-400 my-8 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="lg:w-4/5 w-4/5 text-gray-400 my-8 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
           <div class="navbar-center flex mb-14">
             <ul class="menu  px-1 text-gray-100 flex-col lg:flex-row items-center text-lg">
